--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,11 +35,23 @@ include_directories(polyseed
   include/)
 target_compile_definitions(polyseed PRIVATE POLYSEED_SHARED)
 set_target_properties(polyseed PROPERTIES VERSION 1.0.0
-                                       SOVERSION 1)
+                                          SOVERSION 1
+                                          C_STANDARD 11
+                                          C_STANDARD_REQUIRED ON)
 
 add_library(polyseed_static STATIC ${polyseed_sources})
 set_property(TARGET polyseed_static PROPERTY POSITION_INDEPENDENT_CODE ON)
 include_directories(polyseed_static
   include/)
 target_compile_definitions(polyseed_static PRIVATE POLYSEED_STATIC)
-set_target_properties(polyseed_static PROPERTIES OUTPUT_NAME polyseed)
+set_target_properties(polyseed_static PROPERTIES OUTPUT_NAME polyseed
+                                                 C_STANDARD 11
+                                                 C_STANDARD_REQUIRED ON)
+
+add_executable(polyseed-tests
+  tests/tests.c)
+include_directories(polyseed-tests
+  include/)
+target_compile_definitions(polyseed-tests PRIVATE POLYSEED_STATIC)
+target_link_libraries(polyseed-tests
+  PRIVATE polyseed_static)
