make polyseed_data a private struct - add load/store methods - memzero secret data

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,8 @@ src/lang_pt.c
 src/lang_zh_s.c
 src/lang_zh_t.c
 src/polyseed.c
-src/rs_code.c)
+src/rs_code.c
+src/storage.c)
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
